# scout-ai

./: CLAUDE.md  Plan.md  README.md  common.py  evaluation.py  export_simple_weights.py  featurize_numpy.py  game_state.py  ismcts_player.py  ismcts_value_function.pth  main.py  merge_pickles.py  neural_value_function.py  numpy_neural_player.py  package-lock.json  players.py  power_analysis.py  pyproject.toml  requirements.txt  self_play.py  self_play_agents.py  test_all.py  train_neural_value_function.py
scout_engine/: common.py  evaluation.py  featurize_numpy.py  game_state.py  ismcts_player.py  main.py  merge_pickles.py  neural_value_function.py  numpy_neural_player.py  players.py  power_analysis.py  self_play.py  self_play_agents.py  test_all.py  train_neural_value_function.py
scout_engine/simple_agent_weights/: simple_agent_1_it_79_skill_1.67.npz  simple_agent_2_it_79_skill_1.58.npz  simple_agent_2_it_79_skill_1.58.pth  simple_agent_3_it_79_skill_1.37.npz  simple_agent_4_it_79_skill_1.22.npz  simple_agent_5_it_79_skill_1.17.npz  simple_agent_5_it_79_skill_1.17.pth  simple_agent_6_it_79_skill_1.16.npz  simple_agent_6_it_79_skill_1.16.pth  simple_agent_7_it_79_skill_1.08.npz  (+5 more)
simple_agent_weights/: README.md  simple_agent_0_it_79_skill_1.95.npz  simple_agent_0_it_79_skill_1.95.pth  simple_agent_1_it_79_skill_1.67.pth  simple_agent_3_it_79_skill_1.37.pth  simple_agent_4_it_79_skill_1.22.pth  simple_agent_7_it_79_skill_1.08.pth  simple_agent_9_it_79_skill_0.96.pth
transformer_weights/: transformer_agent_1_it_30_skill_0.15.pth  transformer_agent_1_it_35_skill_0.16.pth
(+9 files in other folders)
