[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-engine"
version = "0.1.0"
description = "Scout card game engine"
requires-python = ">=3.9"
dependencies = [
]

[tool.setuptools]
packages = ["scout_engine", "scout_engine.simple_agent_weights"]

[tool.setuptools.package-data]
"scout_engine.simple_agent_weights" = ["*.pth", "*.npz", "*.md"]

